--- a/charityapp_ang/src/app/benefactors-applications/benefactors-applications.component.html
+++ b/charityapp_ang/src/app/benefactors-applications/benefactors-applications.component.html
@@ -48,7 +48,7 @@
                     <div style="height: 100px"></div>
                 </div>
                 <div>
-                    <button class="button" data-dismiss="modal" (click)="akcept()">Akcept</button>
+                    <button class="button" data-dismiss="modal" (click)="accept()">Accept</button>
                     <button class="button" data-dismiss="modal" (click)="decline()">Decline</button>
                 </div>
 
@@ -57,7 +57,7 @@
                 <h3>Provided files</h3>
                 <div *ngFor="let file of files" class="list-group">
                     <a class="list-group-item list-group-item-success">
-            {{ file!.fileName }}   
+            {{ file!.fileName }}
             <a (click)="onDownload(file)" style="cursor: pointer;" class="alert-success float-right">Download</a>
                     </a>
                     <br>
