starting page description and non-serif font on login and register page

--- a/charityapp_ang/src/app/starting-page/starting-page.component.html
+++ b/charityapp_ang/src/app/starting-page/starting-page.component.html
@@ -19,19 +19,27 @@
         </div>
     </div>
 </nav>
-
+<header><h1 class="fw-light">Welcome</h1></header>
 <!-- Page Content -->
 <div class="container">
     <div class="card border-0 shadow my-5">
         <div class="card-body p-5">
-            <h1 class="fw-light">Welcome</h1>
-            <p class="lead">Short description of organisation</p>
-            <p class="lead" style="color:red; "><b>To-do!</b> <br> Some kind of description... </p>
+
+
+            <p class="lead"><b>Short description of organisation</b></p>
+            <p class="lead" style="color:black; "> <br> The goal of our organisation is to help people in need. We operate completely non-profit and focus solely on selfless help.
+              Fundraisers are held for which then can apply.
+              You can become a beneficiary by submitting an application and a reason.
+              You can offer a help in the collection by making a deposit declaration. Any help is appreciated.
+              To use our service please register or log in. </p>
             <p></p>
-            <p class="lead">Example img</p>
-            <img src="https://i.ibb.co/dkGDRcN/charity-modern-logo.jpg" alt="charity-modern-logo" border="0" height="50" width="100" />
-            <div style="height: 200px"></div>
-            <p class="lead mb-0">Ending text</p>
+<!--            <p class="lead">Example img</p>-->
+            <div class="center">
+              <img src="https://i.ibb.co/dkGDRcN/charity-modern-logo.jpg" alt="charity-modern-logo" border="0" height="300" width="500" />
+
+            </div>
+            <div style="height: 50px"></div>
+            <p class="lead mb-0">Let's make a better world together!</p>
         </div>
     </div>
 </div>
