--- a/charityapp_ang/src/app/login/login.component.css
+++ b/charityapp_ang/src/app/login/login.component.css
@@ -16,7 +16,7 @@ header {
 }
 h1 {
     letter-spacing: 1.5vw;
-    font-family: 'system-ui';
+    /*font-family: 'system-ui';*/
     text-transform: uppercase;
     text-align: center;
 }
@@ -35,7 +35,7 @@ main {
     margin: 15px 0;
     align-items: flex-start;
   }
-  
+
   .example-radio-button {
     margin: 5px;
   }
@@ -45,7 +45,7 @@ main {
     padding: 40px;
     border-radius: 8px;
     background-color: white;
-    font-family: 'system-ui';
+    /*font-family: 'system-ui';*/
     box-shadow: 5px 5px 10px rgb(0,0,0,0.3);
 }
 .form_div {
@@ -71,7 +71,7 @@ main {
     text-indent: 6px;
     margin-top: 10px;
     margin-bottom: 20px;
-    font-family: 'system-ui';
+    /*font-family: 'system-ui';*/
     font-size: 0.9rem;
     letter-spacing: 2px;
 }
@@ -80,7 +80,7 @@ main {
     border-radius: 5px;
     background-color: #FFE6D4;
     padding: 8px 20px;
-    font-family: 'system-ui';
+    /*font-family: 'system-ui';*/
     text-transform: uppercase;
     letter-spacing: .8px;
     display: block;
