--- a/charityapp_ang/src/app/donors-donation-history/donors-donation-history.component.html
+++ b/charityapp_ang/src/app/donors-donation-history/donors-donation-history.component.html
@@ -38,7 +38,7 @@
                     <li class="list-group-item">Action name: {{donation?.charityActionName}}</li>
                     <li class="list-group-item">Amount: {{donation?.amount}}</li>
                     <li class="list-group-item">Payment confirmed: {{donation?.paymentConfirmed}}</li>
-                    <li class="list-group-item">Public: {{donation?.anonymous}}</li>
+                    <li class="list-group-item">Anonymous: {{donation?.anonymous}}</li>
                 </ul>
             </div>
         </div>
