Started working on rating of charity actions and better nav bar

--- a/charityapp_ang/src/app/login/login.component.css
+++ b/charityapp_ang/src/app/login/login.component.css
@@ -2,9 +2,11 @@
     padding: 0px;
     margin: 0px;
 }
+
 body {
     background-color: lightgreen;
 }
+
 header {
     background-color: black;
     color: white;
@@ -12,14 +14,16 @@ header {
     align-items: center;
     justify-content: center;
     height: 15vh;
-    box-shadow: 5px 5px 10px rgb(0,0,0,0.3);
+    box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.3);
 }
+
 h1 {
     letter-spacing: 1.5vw;
     /*font-family: 'system-ui';*/
     text-transform: uppercase;
     text-align: center;
 }
+
 main {
     display: flex;
     align-items: center;
@@ -29,16 +33,17 @@ main {
     background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Mountains-1412683.svg/1280px-Mountains-1412683.svg.png) no-repeat center center;
     background-size: cover;
 }
+
 .example-radio-group {
     display: flex;
     flex-direction: column;
     margin: 15px 0;
     align-items: flex-start;
-  }
+}
 
-  .example-radio-button {
+.example-radio-button {
     margin: 5px;
-  }
+}
 
 .form_class {
     width: 500px;
@@ -46,22 +51,27 @@ main {
     border-radius: 8px;
     background-color: white;
     /*font-family: 'system-ui';*/
-    box-shadow: 5px 5px 10px rgb(0,0,0,0.3);
+    box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.3);
 }
+
 .form_div {
     text-transform: uppercase;
 }
-.form_div > label {
+
+.form_div>label {
     letter-spacing: 3px;
     font-size: 1rem;
 }
+
 .info_div {
     text-align: center;
     margin-top: 20px;
 }
+
 .info_div {
     letter-spacing: 1px;
 }
+
 .field_class {
     width: 100%;
     border-radius: 6px;
@@ -75,6 +85,7 @@ main {
     font-size: 0.9rem;
     letter-spacing: 2px;
 }
+
 .submit_class {
     border-style: none;
     border-radius: 5px;
@@ -86,9 +97,10 @@ main {
     display: block;
     margin: auto;
     margin-top: 10px;
-    box-shadow: 2px 2px 5px rgb(0,0,0,0.2);
+    box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.2);
     cursor: pointer;
 }
+
 footer {
     height: 10vh;
     background-color: black;
@@ -96,15 +108,21 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: -5px -5px 10px rgb(0,0,0,0.3);
+    box-shadow: -5px -5px 10px rgb(0, 0, 0, 0.3);
 }
-footer > p {
+
+footer>p {
     text-align: center;
     font-family: 'system-ui';
     letter-spacing: 3px;
 }
-footer > p > a {
+
+footer>p>a {
     text-decoration: none;
     color: white;
     font-weight: bold;
+}
+
+.nav-item {
+    float: left;
 }
