--- a/charityapp_ang/src/app/user/user.component.html
+++ b/charityapp_ang/src/app/user/user.component.html
@@ -17,6 +17,9 @@
                         <li class="nav-item">
                             <a class="nav-link" routerLink="/charityActionAplicationList" routerLinkActive="active" ariaCurrentWhenActive="page">Charity actions applications</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" routerLink="/actionRating" routerLinkActive="active" ariaCurrentWhenActive="page">Charity actions rating</a>
+                        </li>
                     </div>
                     <div *ngIf="userIsDonor()">
                         <li class="nav-item">
