--- a/charityapp_ang/src/app/starting-page/starting-page.component.css
+++ b/charityapp_ang/src/app/starting-page/starting-page.component.css
@@ -1,4 +1,5 @@
 /* Set a background image by replacing the URL below */
+
 @import "https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css";
 body {
     background: url('https://source.unsplash.com/twukN12EN7c/1920x1080') no-repeat center center fixed;
@@ -6,26 +7,30 @@ body {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
-  }
+}
 
 header {
-  background-color: black;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 15vh;
-  box-shadow: 5px 5px 10px rgb(0,0,0,0.3);
+    background-color: black;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 15vh;
+    box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.3);
 }
+
 h1 {
-  letter-spacing: 1.5vw;
-  /*font-family: 'system-ui';*/
-  text-transform: uppercase;
-  text-align: center;
+    letter-spacing: 1.5vw;
+    /*font-family: 'system-ui';*/
+    text-transform: uppercase;
+    text-align: center;
 }
 
 .center {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
 }
 
+.nav-item {
+    float: left;
+}
