--- a/charityapp_ang/src/app/charity-action-rating/charity-action-rating.component.html
+++ b/charityapp_ang/src/app/charity-action-rating/charity-action-rating.component.html
@@ -1,1 +1,63 @@
-<p>charity-action-rating works!</p>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light static-top mb-5 shadow">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="https://i.ibb.co/dkGDRcN/charity-modern-logo.jpg" alt="charity-modern-logo" border="0" height="36" /> Charity organisation
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" onclick="return back()"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/user" routerLinkActive="active" ariaCurrentWhenActive="page">User</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/charityAction" routerLinkActive="active" ariaCurrentWhenActive="page">Open charity actions</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" (click)="logout()" routerLinkActive="active" ariaCurrentWhenActive="page">Logout</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div *ngIf="noActionsCheck() else avaible_action">
+        <div class="container">
+            <div class="card border-0 shadow my-5">
+                <div class="card-body p-5">
+                    <h3>There is no avaible actions to rate</h3>
+                    <div style="height: 100px"></div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <ng-template #avaible_action>
+        <!-- Page Content -->
+        <div class="container" id="main-container">
+            <div class="row">
+                <div *ngFor="let chAction of charityActions" class="col-md-6 col-xl-3 p-1">
+                    <div class="card m-b-30">
+                        <div class="card-body row" style="margin-left: 5px">
+                        </div>
+                        <ul class="list-group list-group-flush" style="margin-left: 5px">
+                            <li class="list-group-item"><i class="fa float-right"></i>Action: {{chAction?.name}}</li>
+                            <li class="list-group-item"><i class="fa float-right"></i>Action: {{chAction?.goal}}</li>
+                            <li class="list-group-item"><i class="fa float-right"></i>Action: {{chAction?.raised}}</li>
+                            <li class="list-group-item"><i class="fa float-right"></i>Reason: {{chAction?.endDate}}</li>
+                        </ul>
+                        <div class="card-body">
+                            <div class="float-right btn-group btn-group-sm">
+                                <a (click)="rate(chAction.name)" class="btn btn-primary tooltips" data-placement="top" data-original-title="Show">Rate </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </ng-template>
+</body>
