Finished rating of charity actions

--- a/charityapp_ang/src/app/charity-action-rating/charity-action-rating.component.html
+++ b/charityapp_ang/src/app/charity-action-rating/charity-action-rating.component.html
@@ -46,9 +46,9 @@
                         </div>
                         <ul class="list-group list-group-flush" style="margin-left: 5px">
                             <li class="list-group-item"><i class="fa float-right"></i>Action: {{chAction?.name}}</li>
-                            <li class="list-group-item"><i class="fa float-right"></i>Action: {{chAction?.goal}}</li>
-                            <li class="list-group-item"><i class="fa float-right"></i>Action: {{chAction?.raised}}</li>
-                            <li class="list-group-item"><i class="fa float-right"></i>Reason: {{chAction?.endDate}}</li>
+                            <li class="list-group-item"><i class="fa float-right"></i>Goal: {{chAction?.goal}}</li>
+                            <li class="list-group-item"><i class="fa float-right"></i>Raised: {{chAction?.raised}}</li>
+                            <li class="list-group-item"><i class="fa float-right"></i>Ended: {{chAction?.endDate}}</li>
                         </ul>
                         <div class="card-body">
                             <div class="float-right btn-group btn-group-sm">
