Work on donor rating continue

--- a/charityapp_ang/src/app/charity-action-rating/rate-charity-action.component.html
+++ b/charityapp_ang/src/app/charity-action-rating/rate-charity-action.component.html
@@ -1,4 +1,4 @@
-<div id="main-container">
+<div>
 
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light static-top mb-5 shadow">
