Work on donor rating finished

--- a/charityapp_ang/src/app/rate-donors-list/rate-donor.component.html
+++ b/charityapp_ang/src/app/rate-donors-list/rate-donor.component.html
@@ -42,8 +42,8 @@
                             <label></label>
                             <mat-radio-group aria-labelledby="example-radio-group-label" class="example-radio-group" ngModel name="rating">
                                 <span class="group1">
-                            <label><mat-radio-button class="example-radio-button" [value]=1>1</mat-radio-button></label>
-                            <mat-radio-button class="example-radio-button" [value]=2>2</mat-radio-button>
+                            <mat-radio-button class="example-radio-button" [value]=true>Good donor</mat-radio-button>
+                            <mat-radio-button class="example-radio-button" [value]=false>Bad donor</mat-radio-button>
                         
                         </span>
 
