--- a/charityapp_ang/src/app/rate-donors-list/rate-donors-list.component.html
+++ b/charityapp_ang/src/app/rate-donors-list/rate-donors-list.component.html
@@ -29,7 +29,7 @@
         <div class="container">
             <div class="card border-0 shadow my-5">
                 <div class="card-body p-5">
-                    <h3>There is no avaible actions to rate</h3>
+                    <h3>There is no avaible donators to rate</h3>
                     <div style="height: 100px"></div>
                 </div>
             </div>
