--- a/charityapp_ang/src/app/charity-action/charity-action-details.component.html
+++ b/charityapp_ang/src/app/charity-action/charity-action-details.component.html
@@ -61,10 +61,15 @@
                     <a (click)="endCharityAction()" class="btn btn-primary tooltips" data-placement="top" data-original-title="Show">End action</a>
                 </div>
 
-              <div class="float-right btn-group btn-group-sm">
-                <a (click)="addImage()" class="btn btn-primary tooltips" data-placement="top" data-original-title="Show">Add image</a>
-              </div>
+                <div class="float-right btn-group btn-group-sm">
+                    <a (click)="addImage()" class="btn btn-primary tooltips" data-placement="top" data-original-title="Show">Add image</a>
+                </div>
             </div>
+        </div>
+    </div>
+    <div>
+        <div *ngFor="let photo of photos">
+            <img src="/assets/img/{{name}}/{{photo}}" alt="image" width="400" height="auto" />
         </div>
     </div>
     <div class="container" id="main-container">
@@ -82,36 +87,36 @@
 </div>
 
 <div class="modal fade" id="addImageModal">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="addImageModalLabel">Add image</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="addImageModalLabel">Add image</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-      </div>
-      <div class="modal-body">
-
-        <form enctype="multipart/form-data">
-          <fieldset>
-            <div class="form-group">
-              <div>
-                <input type="file" (change)="onUpload($any($event).target.files)" name="files" multiple class="form-control" />
-              </div>
             </div>
-          </fieldset>
-        </form>
-        <div *ngIf="filenames?.length! > 0" class="js-upload-finished">
-          <h4>Sent files</h4>
-          <div *ngFor="let filename of filenames" class="list-group">
-            {{ filename }}
-            <br>
-          </div>
+            <div class="modal-body">
+
+                <form enctype="multipart/form-data">
+                    <fieldset>
+                        <div class="form-group">
+                            <div>
+                                <input type="file" (change)="onUpload($any($event).target.files)" name="files" multiple class="form-control" />
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
+                <div *ngIf="filenames?.length! > 0" class="js-upload-finished">
+                    <h4>Sent files</h4>
+                    <div *ngFor="let filename of filenames" class="list-group">
+                        {{ filename }}
+                        <br>
+                    </div>
+                </div>
+                <button class="button" data-dismiss="modal" (click)="finish()">Finish</button>
+
+
+            </div>
         </div>
-        <button class="button" data-dismiss="modal" (click)="finish()">Finish</button>
-
-
-      </div>
     </div>
-  </div>
 </div>
